--- a/app/stringdb-benchmark/app/views/main.scala.html
+++ b/app/stringdb-benchmark/app/views/main.scala.html
@@ -5,11 +5,18 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
+
+
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/morris/css/morris.css")">
+
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/font-awesome/css/font-awesome.css")">
+
+
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
     </head>
     <body>
-        @content
+    @content
     </body>
 </html>
