--- a/app/stringdb-benchmark/public/stylesheets/main.css
+++ b/app/stringdb-benchmark/public/stylesheets/main.css
@@ -491,4 +491,11 @@ hgroup h2.lead { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; 
 }
 
 
+#graphcontainer{
+
+    width:100%;
+
+}
+
+
 /*/chat */
