--- a/app/stringdb-benchmark/public/app/views/shell.html
+++ b/app/stringdb-benchmark/public/app/views/shell.html
@@ -16,6 +16,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="#mysql">MySQL</a></li>
                 <li><a href="#neo4j">neo4j</a></li>
+                <li><a href="#graph">Graph</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
