kiegészített tesztek és egymás utáni tesztek

--- a/app/stringdb-benchmark/public/app/views/neo4j.html
+++ b/app/stringdb-benchmark/public/app/views/neo4j.html
@@ -1,1 +1,34 @@
-<h2>Soon..</h2>
+<div class="container">
+    <h2>
+       neo4j benchmarks  <small> <strong data-bind="text:proteinCount"></strong> interactions in the database</small>
+
+    </h2>
+    <hr/>
+
+    <div class="row">
+        <div class="col-md-5" data-bind="foreach:benchmarks">
+            <div class="row" >
+                <div class="col-md-12">
+                    <div class="blockquote-box blockquote-info clearfix">
+                        <div class="square pull-left">
+                            <span class="glyphicon glyphicon glyphicon-dashboard glyphicon-lg"></span>
+                        </div>
+                        <h4 data-bind="text:label"></h4>
+                        <p> <small data-bind="text:description"></small> </p>
+                        <strong><span data-bind="text:value"></span> ms</strong>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-md-7">
+            <div id="speedchart_mysql"></div>
+        </div>
+
+
+
+
+    </div>
+
+</div>
