--- a/app/stringdb-benchmark/public/stylesheets/main.css
+++ b/app/stringdb-benchmark/public/stylesheets/main.css
@@ -498,4 +498,9 @@ hgroup h2.lead { font: normal normal 1.125em "Roboto",Arial,Verdana,sans-serif; 
 }
 
 
-/*/chat */
+.clickable{
+
+
+    cursor: pointer;
+    cursor:hand;
+}
