--- a/app/stringdb-benchmark/public/app/views/shell.html
+++ b/app/stringdb-benchmark/public/app/views/shell.html
@@ -14,8 +14,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#mysql">MySQL</a></li>
-                <li><a href="#neo4j">neo4j</a></li>
+                <li><a href="#benchmarks">All benchmars</a></li>
                 <li><a href="#graph">Graph</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
