--- a/app/stringdb-benchmark/public/app/views/mysql.html
+++ b/app/stringdb-benchmark/public/app/views/mysql.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2>
-      <i class="fa fa-refresh clickable"  data-bind="click:reload"  ></i>   mysql benchmarks  <small> <strong data-bind="text:proteinCount"></strong> interactions in the database</small>
+      <i class="fa fa-refresh clickable"  data-bind="click:reload"  ></i>   mysql and neo4j benchmarks  <small> <strong data-bind="text:proteinCount"></strong> interactions in the database</small>
 
     </h2>
     <hr/>
